--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,11 @@ body {
   letter-spacing: 0.02em;
   color: var(--color-grey);
 }
+.active {
+  color: var(--color-ocean);
+}
+
+
 .mobile-menu-header:hover,
 .mobile-menu-header:focus {
   color: var(--color-ocean);
@@ -820,7 +825,7 @@ body {
     width: 100%;
   }
   .team-flex-item {
-    flex-basis: calc((100% - 24px) / 2);
+    flex-basis: calc((100% - 210px) / 2);
   }
 }
 @media screen and (max-width: 1157px) {
@@ -846,7 +851,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 24px;
+  gap: 72px 24px;
 }
 .customers-list-item {
   width: calc((100% - 120px) / 6);
@@ -985,7 +990,8 @@ body {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  width: 264px;
+  width: 300px;
+  /* width: 264px; */
   height: 40px;
   padding: 8px 16px;
   box-sizing: border-box;
@@ -997,6 +1003,16 @@ body {
   outline: 2px solid transparent;
   outline-offset: -2px;
   transition: outline-color var(--transition);
+}
+@media only screen and (min-width: 428px) {
+  .footer-email-input {
+    width: 398px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .footer-email-input {
+    width: 264px;
+  }
 }
 .footer-email-btn {
   position: relative;
@@ -1033,14 +1049,15 @@ body {
 @media screen and (max-width: 767px) {
   .footer {
     align-items: center;
-    padding: 0 0;
+    
+    padding-top: 96px;
+    padding-bottom: 96px;
   }
   .footer-container {
     flex-direction: column;
     align-items: center;
     max-width: 432px;
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding: 0 0;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1072,13 +1089,14 @@ body {
 }
 @media screen and (min-width: 768px) and (max-width: 1157px) {
   .footer {
-    padding: 0 0;
+    /* */
+    padding-top: 96px;
+    padding-bottom: 96px;
   }
   .footer-container {
     flex-wrap: wrap;
     max-width: 582px;
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding: 0 0;
     margin-left: auto;
     margin-right: auto;
   }
